--- a/index.html
+++ b/index.html
@@ -1,13 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>psycho</title>
+	<script src="public/js/jquery-1.11.3.min.js"></script>
+	<script src="public/bootstrap-v3.3.1/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="public/bootstrap-v3.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="public/css/index.css">
 </head>
-<script src="public/js/jquery-1.11.3.min.js"></script>
-<script src="public/bootstrap-v3.3.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" src="public/bootstrap-v3.3.1/css/bootstrap.min.css">
+
 <body>
+  <div class="cover container">
+    <div class="row cover-title">
+      <h2>測驗系統</h2>
+      請依施測人員指示選擇版本，點選按鈕進入測驗。
+      <hr/>
+    </div>
+    <div class="row">
+      <div class="col-md-3">
+        
+      </div>
+      <div class="col-md-3" style="padding-left: 80px;">
+        <button type="button" class="btn btn-primary cover-btn" id="test1">自評版</button>
+      </div>
+      <div class="col-md-3" style="padding-right: 80px;">
+        <button type="button" class="btn btn-success cover-btn" id="test2">他評版</button>
+      </div>
+      <div class="col-md-3">
+        
+      </div>
+    </div>
+    <div class="cover-time"></div>
+  </div>
+
 
 </body>
 </html>
 
+<script type="text/javascript">
+$(document).ready(function() {
+	var $cover_time = $('.cover-time');
+	function updateTime(){
+		var dt = new Date();
+		$cover_time.html('本地時間：'+dt);
+	}
+	updateTime();
+	setInterval( updateTime , 1000);
+
+	$('#test1').click(function(){
+		location.href = 'public/test.html';
+	});
+});
+</script>
