--- a/public/test.html
+++ b/public/test.html
@@ -15,19 +15,32 @@
     <div></div>
     <div class="row">
       <div class="col-md-2 test-nav-l">
-        <span class="check done">已畢填</span>(1)第一題<br/>
-        <span class="check done">已填</span>(2)第二題<br/>
-        <span class="check undone">未填</span>(3)第三題<br/>
-
+       <!--  <span class="check done">已填</span>(1)第一題<br/>
+        <span class="check undone">未填</span>(3)第三題<br/> -->
+        <ul class="list-group" style="line-height: 16px">
+          <li class="list-group-item" style="background-color: #337ab7; color: white; margin-bottom: -21px; padding-top: 14px; padding-bottom: 14px; font-size: 17px">題目列表</li>
+        </ul>
+        <ul id="nav-body" class="list-group" style="line-height: 16px">
+        </ul>
       </div>
       <div class="col-md-10 test-body">
         <div class="test-body-title"><h3>(1)<b>第一題</b></h3></div>
-        <div class="test-vody-video"><video src="test-media/4.mpg" width="768" height="332"></video></div>
+        <div class="test-vody-video"><video src="test-media/4.mpg" width="928" height="401"></video></div>
         <br/>
-          <div class="test-body-des" style="border-left-color: #5bc0de;"><h4>
-            他能告訴你，他對他人的真正的感覺嗎？比如他心裡對父母有些生氣沒有表現出來，他能告訴你他的感覺。
-          </h4></div>
-          
+          <div class="panel panel-info">
+              <div class="test-body-des panel-heading">Panel heading without title</div>
+              <div class="panel-body">
+                Panel content<br/>
+                <br/>
+                <img height="60" src="./images/1.png" />
+                <img height="60" src="./images/2.png" />
+                <img height="60" src="./images/3.png" />
+                <img height="60" src="./images/4.png" />
+              </div>
+          </div>
+          <div class="test-body-nav">
+            上一題 下一題
+          </div>
       </div>
     </div>
   </div>
