revise "before delivery 1.0"

--- a/public/test.html
+++ b/public/test.html
@@ -25,21 +25,20 @@
       </div>
       <div class="col-md-10 test-body">
         <div class="test-body-title"><h3>(1)<b>第一題</b></h3></div>
-        <div class="test-vody-video"><video src="test-media/4.mpg" width="928" height="401"></video></div>
+        <div class="test-body-video"><video controls src="test-media/4.mpg" width="852" height="361"></video></div>
         <br/>
           <div class="panel panel-info">
               <div class="test-body-des panel-heading">Panel heading without title</div>
               <div class="panel-body">
-                Panel content<br/>
-                <br/>
-                <img height="60" src="./images/1.png" />
-                <img height="60" src="./images/2.png" />
-                <img height="60" src="./images/3.png" />
-                <img height="60" src="./images/4.png" />
+                <div style="display: inline-block"><img height="60" src="./images/1.png" style="margin-bottom: 5px;" /><br/>做到 0 ~ 2</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div style="display: inline-block"><img height="60" src="./images/2.png" style="margin-bottom: 5px;" /><br/>做到 3 ~ 5</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div style="display: inline-block"><img height="60" src="./images/3.png" style="margin-bottom: 5px;" /><br/>做到 6 ~ 8</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div style="display: inline-block"><img height="60" src="./images/4.png" style="margin-bottom: 5px;" /><br/>做到 9 ~ 10</div>
               </div>
           </div>
           <div class="test-body-nav">
-            上一題 下一題
+            <button class="btn-primary next-btn" style="font-size: 20px; padding: 5px 12px 5px 12px;">下一題</button>
+
           </div>
       </div>
     </div>
