--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <div class="col-md-3">
         
       </div>
-      <div class="col-md-3" style="padding-left: 80px;">
+      <div class="col-md-3" style="">
         <button type="button" class="btn btn-primary cover-btn" id="test1">自評版</button>
       </div>
-      <div class="col-md-3" style="padding-right: 80px;">
+      <div class="col-md-3" style="">
         <button type="button" class="btn btn-success cover-btn" id="test2">他評版</button>
       </div>
       <div class="col-md-3">
