--- a/public/test.html
+++ b/public/test.html
@@ -30,14 +30,14 @@
           <div class="panel panel-info">
               <div class="test-body-des panel-heading">Panel heading without title</div>
               <div class="panel-body">
-                <div style="display: inline-block"><img height="60" src="./images/1.png" style="margin-bottom: 5px;" /><br/>做到 0 ~ 2</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div style="display: inline-block"><img height="60" src="./images/2.png" style="margin-bottom: 5px;" /><br/>做到 3 ~ 5</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div style="display: inline-block"><img height="60" src="./images/3.png" style="margin-bottom: 5px;" /><br/>做到 6 ~ 8</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <div style="display: inline-block"><img height="60" src="./images/4.png" style="margin-bottom: 5px;" /><br/>做到 9 ~ 10</div>
+                <div class="answer" id="a1" style="display: inline-block"><img height="60" src="./images/a1.png" style="margin-bottom: 5px;" /><br/>做到 0 ~ 2</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="answer" id="a2" style="display: inline-block"><img height="60" src="./images/a2.png" style="margin-bottom: 5px;" /><br/>做到 3 ~ 5</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="answer" id="a3" style="display: inline-block"><img height="60" src="./images/a3.png" style="margin-bottom: 5px;" /><br/>做到 6 ~ 8</div> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <div class="answer" id="a4" style="display: inline-block"><img height="60" src="./images/a4.png" style="margin-bottom: 5px;" /><br/>做到 9 ~ 10</div>
               </div>
           </div>
           <div class="test-body-nav">
-            <button class="btn-primary next-btn" style="font-size: 20px; padding: 5px 12px 5px 12px;">下一題</button>
+            <button class="btn btn-primary next-btn" style="font-size: 20px; padding: 5px 12px 5px 12px;">下一題</button>
 
           </div>
       </div>
