--- a/public/result.html
+++ b/public/result.html
@@ -14,8 +14,12 @@
       <!-- Default panel contents -->
       <div class="panel-heading">測驗結果</div>
       <div class="panel-body" style="padding: 32px;">
+        <p><h2><span id="show_id"></span></h2></p>
         <p>恭喜完成測驗，請依施測人員指示，確認問題完成後，按下按鈕送出至雲端網頁。</p>
         <button class='btn btn-primary submit-btn' style='font-size: 20px; padding: 5px 12px 5px 12px;'>儲存結果</button>
+        <span id="cloud-non" style="margin-left: 10px" class="label label-default">尚未儲存</span>
+        <span id="cloud-success" style="margin-left: 10px; visibility: hidden;" class="label label-success">儲存成功</span>
+        <span id="cloud-timestamp" style="visibility: hidden;"> 00/00/00 00:00:00</span>
       </div>
 
       <!-- Table -->
@@ -23,7 +27,7 @@
       <table class="table result-table">
         <thead>
           <tr>
-            <th style="text-align: center;">#題號</th>
+            <th style="text-align: center;">#</th>
             <th>題目</th>
             <th>作答</th>
             <th>狀態</th>
@@ -51,8 +55,17 @@
 	}
 	$result_table_tbody = $('.result-table tbody');
 	(function show_result(){
+    $('#show_id').html(data[0].answer); //學號 index = 0
 		data.forEach(function(d){
-			$result_table_tbody.append("<tr><td>"+d.id+"</td><td>"+d.des+"</td><td>"+d.answer+"</td><td>完成</td></tr>");
+			if(Array.isArray(d.answer)){ //checkbox 撫平
+				for(var i=0; i < d.type1_options_val.length; i++){
+					var isChecked;
+					(d.answer.indexOf(d.type1_options_val[i])>=0) ? isChecked='1' : isChecked='0';
+					$result_table_tbody.append("<tr><td>"+d.id+"-"+i+"</td><td>"+d.type1_options_des[i]+"</td><td>"+isChecked+"</td><td>完成</td></tr>");
+				}
+			}else{
+				$result_table_tbody.append("<tr><td>"+d.id+"</td><td>"+d.des+"</td><td>"+d.answer+"</td><td>完成</td></tr>");
+			}
 		});
 	}());
 </script>
